--- a/localisation/english/replace/deluge_poland_content_l_english.yml
+++ b/localisation/english/replace/deluge_poland_content_l_english.yml
@@ -479,6 +479,68 @@
  POL_deal_with_jews_desc:0 ""
  POL_alliance_with_church_monarchist:0 "Alliance with Church"
  POL_alliance_with_church_monarchist_desc:0 ""
+ POL_exclude_nobility_from_obligatory_army_service:0 "Exclude Nobility from Obligatory Army Service"
+ POL_exclude_nobility_from_obligatory_army_service_desc:0 ""
+ POL_exceptions_for_the_nobility_in_the_army:0 "Exceptions for the Nobility in the Army"
+ POL_exceptions_for_the_nobility_in_the_army_desc:0 ""
+ POL_profesional_army:0 "Professional Army"
+ POL_profesional_army_desc:0 ""
+ POL_women_in_military_monarchist:0 "Women in Military"
+ POL_women_in_military_monarchist_desc:0 ""
+ POL_path_towards_racial_purity:0 "Path Towards Racial Purity"
+ POL_path_towards_racial_purity_desc:0 ""
+ POL_equality_of_race:0 "Equality of Race"
+ POL_equality_of_race_desc:0 ""
+ POL_encourage_imigration:0 "Encourage Immigration"
+ POL_encourage_imigration_desc:0 ""
+ POL_free_market_economy:0 "Free Market Economy"
+ POL_free_market_economy_desc:0 ""
+ POL_mixed_economy:0 "Mixed Economy"
+ POL_mixed_economy_desc:0 ""
+ POL_economy_controlled_by_synarch:0 "Economy Controlled by Synarch"
+ POL_economy_controlled_by_synarch_desc:0 ""
+ POL_women_in_parlament:0 "Women in the Parliament"
+ POL_women_in_parlament_desc:0 ""
+ POL_every_adult_men_in_parlament:0 "Every Adult Men in the Parliament"
+ POL_every_adult_men_in_parlament_desc:0 ""
+ POL_only_nobility_in_the_parlament:0 "Only Nobility in the Parliament"
+ POL_only_nobility_in_the_parlament_desc:0 ""
+ POL_disband_parlament:0 "Disband the Parliament"
+ POL_disband_parlament_desc:0 ""
+ POL_noble_titles_for_women:0 "Noble Titles for Women"
+ POL_noble_titles_for_women_desc:0 ""
+ POL_socialist_kingdom:0 "Socialist Kingdom"
+ POL_socialist_kingdom_desc:0 ""
+ POL_increasing_the_distribution_of_noble_titles:0 "Increasing the Distribution of Noble Titles"
+ POL_increasing_the_distribution_of_noble_titles_desc:0 ""
+ POL_enpower_bourgeoisie:0 "Enpower Bourgeoisie"
+ POL_enpower_bourgeoisie_desc:0 ""
+ POL_reintroduce_liberum_veto:0 "Reintroduce Liberum Veto"
+ POL_reintroduce_liberum_veto_desc:0 ""
+ POL_king_only_figurehead:0 "King - Only Figurehead"
+ POL_king_only_figurehead_desc:0 ""
+ POL_technocratic_government:0 "Technocratic Government"
+ POL_technocratic_government_desc:0 ""
+ POL_empower_the_synarch:0 "Enpower the Synarch"
+ POL_empower_the_synarch_desc:0 ""
+ POL_increase_influence_of_AMORC_knights:0 "Increase Influence of AMORC Knights"
+ POL_increase_influence_of_AMORC_knights_desc:0 ""
+ POL_cut_off_greedy_nobility:0 "Cut Off Greedy Nobility"
+ POL_cut_off_greedy_nobility_desc:0 ""
+ POL_enpower_masonic_lodges:0 "Enpower Masonic Lodges"
+ POL_enpower_masonic_lodges_desc:0 ""
+ POL_dissemination_of_sarmatian_myth:0 "Dissemination of Sarmatian Myth"
+ POL_dissemination_of_sarmatian_myth_desc:0 ""
+ POL_bring_back_patriarchy:0 "Bring Back Patriarchy"
+ POL_bring_back_patriarchy_desc:0 ""
+ POL_healthcare_reform:0 "Healthcare Reform"
+ POL_healthcare_reform_desc:0 ""
+ POL_help_lower_class:0 "Help Lower Class"
+ POL_help_lower_class_desc:0 ""
+ POL_build_up_highways:0 "Build Up Highways"
+ POL_build_up_highways_desc:0 ""
+ POL_attract_foreign_funds:0 "Attract Foreign Funds"
+ POL_attract_foreign_funds_desc:0 ""
  ##################TRAITS##############################
  marshal_of_sky_and_soil:0 "Marshal of the Sky and the Soil"
  quarreling_politicians_and_generals:0 "Quarreling Politicians and Generals"
