--- a/localisation/english/countries_l_english.yml
+++ b/localisation/english/countries_l_english.yml
@@ -1044,11 +1044,11 @@
  ROM_fascism_DEF:0 "the Kingdom of Romania"
  ROM_fascism_ADJ:0 "Romanian"
  
- BLR_communism:0 "Belarusian Socialist Сouncil Republic"
- BLR_communism_DEF:0 "the Belarusian Socialist Сouncil Republic"
+ BLR_communism:0 "Belarusian Socialist Council Republic"
+ BLR_communism_DEF:0 "the Belarusian Socialist Council Republic"
  BLR_communism_ADJ:0 "Belarusian"
- BLR_democratic:0 "Belarusian National Republic"
- BLR_democratic_DEF:0 "the Belarusian National Republic"
+ BLR_democratic:0 "Belarusian People's Republic"
+ BLR_democratic_DEF:0 "the Belarusian People's Republic"
  BLR_democratic_ADJ:0 "Belarusian"
  BLR_neutrality:0 "Belarus"
  BLR_neutrality_DEF:0 "Belarus"
@@ -1060,8 +1060,8 @@
  UKR_communism:0 "Ukrainian Socialist Council Republic"
  UKR_communism_DEF:0 "the Ukrainian Socialist Council Republic"
  UKR_communism_ADJ:0 "Ukrainian"
- UKR_democratic:0 "Ukrainian National Republic"
- UKR_democratic_DEF:0 "the Ukrainian National Republic"
+ UKR_democratic:0 "Ukrainian People's Republic"
+ UKR_democratic_DEF:0 "the Ukrainian People's Republic"
  UKR_democratic_ADJ:0 "Ukrainian"
  UKR_neutrality:0 "Ukrainian State"
  UKR_neutrality_DEF:0 "the Ukrainian State"
@@ -1111,17 +1111,17 @@
  SER_fascism_DEF:0 "the Kingdom of Serbia"
  SER_fascism_ADJ:0 "Serbian"
  
- ALB_communism:0 "People's Socialist Republic of Albania"
- ALB_communism_DEF:0 "the People's Socialist Republic of Albania"
+ ALB_communism:0 "People's Republic of Albania"
+ ALB_communism_DEF:0 "the People's Republic of Albania"
  ALB_communism_ADJ:0 "Albanian"
- ALB_democratic:0 "Republic of Albania"
- ALB_democratic_DEF:0 "the Republic of Albania"
+ ALB_democratic:0 "Albanian Kingdom"
+ ALB_democratic_DEF:0 "the Albanian Kingdom"
  ALB_democratic_ADJ:0 "Albanian"
- ALB_neutrality:0 "Kingdom of Albania"
- ALB_neutrality_DEF:0 "the Kingdom of Albania"
+ ALB_neutrality:0 "Albanian Kingdom"
+ ALB_neutrality_DEF:0 "the Albanian Kingdom"
  ALB_neutrality_ADJ:0 "Albanian"
- ALB_fascism:0 "Kingdom of Albania"
- ALB_fascism_DEF:0 "the Kingdom of Albania"
+ ALB_fascism:0 "Greater Albania"
+ ALB_fascism_DEF:0 "the Greater Albania"
  ALB_fascism_ADJ:0 "Albanian"
  
  GRE_communism:0 "Hellenic Republic"
