--- a/localisation/english/replace/deluge_poland_characters_l_english.yml
+++ b/localisation/english/replace/deluge_poland_characters_l_english.yml
@@ -254,10 +254,11 @@
  POL_deluge_julian_tuwin_desc:0 ""
  POL_Character_deluge_izabella_roza_radziwillowna:0 "Izabella I"
  POL_deluge_izabella_roza_radziwillowna_desc:0 ""
- POL_Character_deluge_andrassy_sandor:0 "Aleksander II Andrássy"
+ POL_Character_deluge_andrassy_sandor:0 "Aleksander II"
+ POL_deluge_andrassy_sandor_desc:0 ""
  POL_Character_deluge_augustyn_czartoryski:0 "Augustyn Józef III"
  POL_deluge_augustyn_czartoryski_desc:0 ""
- POL_Character_deluge_pawel_salwator_piast_riedelski:0 "Paweł Zbawca I"
+ POL_Character_deluge_pawel_salwator_piast_riedelski:0 "Paweł I"
  POL_deluge_pawel_salwator_piast_riedelski_desc:0 ""
  POL_Character_deluge_andrzej_walewski:0 "Andrzej I"
  POL_deluge_andrzej_walewski_desc:0 ""
