--- a/localisation/english/replace/deluge_poland_focuses_l_english.yml
+++ b/localisation/english/replace/deluge_poland_focuses_l_english.yml
@@ -205,6 +205,51 @@
  POL_expand_war_industry_desc:0 "The NRC insists on expanding the military industry, paying special attention to modernization. New production lines, factories and infrastructure will not only create new jobs and stimulate investment, but also provide Poland with the military equipment necessary to confront old and new threats."
  POL_autarky:0 "Autarky"
  POL_autarky_desc:0 "We have reached an acceptable level of self-sufficiency. From now on, Poland does not need foreign trade and foreign influence to function properly. Of course, we will feel the blow, because independence must have its price, but our economy will rise like a phoenix and pay back in full."
+ POL_promote_national_radical_ideology:0 "National-Radical Ideology"
+ POL_promote_national_radical_ideology_desc:0 "Ultranationalist ideology has never had a clear definition, only a general concept. We will thoroughly approach this issue and create an ideology with an emphasis on traditional values, self-reliance and military might."
+ POL_deals_with_church:0 "Unity with the Church"
+ POL_deals_with_church_desc:0 "The church is the main ally of our party and it is our duty to protect the Catholic faith on which the nation was built. We must link the government and the church together, as it once was. From now on there will be no dominant confession, only the state one!"
+ POL_catholic_youth_organisations:0 "Grey Ranks"
+ POL_catholic_youth_organisations_desc:0 "If we want to leave behind a future, we need to create a foundation for it. The Polish Scouting and Guiding Association — our national Scout organization — needs to be given more resources and given a new goal. Polish pioneers need to be instilled with feelings of camaraderie, courage, self-sacrifice and faith."
+ POL_unite_with_onr_abc:0 "There is Only One Camp"
+ POL_unite_with_onr_abc_desc:0 "After the May 1930 coup, many members of the NRC joined Piłsudski, and then created the Falanga — what we are now, while others moved to the National Democrats, but later created their own wing of the party: NRC-ABC. Now that we are in charge, it's time to stop this endless schism and accept the repentant comrades back."
+ POL_establish_universal_educational_organization:0 "Universal Educational Organization"
+ POL_establish_universal_educational_organization_desc:0 "The UEO is an organization that, together with parents, teachers and clergy, will create a new type of man from the teenage generation, whose credo will be the Catholic faith and national ideals."
+ POL_introduce_eugenics_into_hospitals:0 "Eugenics"
+ POL_introduce_eugenics_into_hospitals_desc:0 "In the last decade, the young science of breeding applicable to humans, eugenics, has been gaining popularity. And, although it was invented in the West, it is very suitable for the policy that we are pursuing. Polish scientists are able to develop this teaching, designed to combat the phenomena of degeneration in the human gene pool."
+ POL_create_new_type_of_man:0 "A New Type of Man"
+ POL_create_new_type_of_man_desc:0 "To show what an exemplary Pole should be, we will create a propaganda image of a new man! If it is a male, then he should be stately, fit, work hard or serve; if it is a female, then she should take care of children, be a housewife and pretty."
+ POL_isolate_worse_ones_from_poles:0 "Social Control"
+ POL_isolate_worse_ones_from_poles_desc:0 "We simply cannot allow anyone unworthy, like Zionists, liberals and atheists, to interfere in the lives of decent citizens. We need to isolate these antisocial elements by giving them the hardest and dirtiest work and settling them in remote places."
+ POL_nationalise_minorites_fortunes:0 "Ours and Always has Been"
+ POL_nationalise_minorites_fortunes_desc:0 "Various national minorities have been parasitizing Poles for centuries, especially in times of our weakness. They exploited us as moneylenders, merchants and in many other areas related to money. But now the time has come for Poland when we can return everything acquired by legitimate labor..."
+ POL_clean_the_ghettos:0 "Clean the Ghettos"
+ POL_clean_the_ghettos_desc:0 "In a number of cities, there are neighborhoods or entire districts of disadvantaged residents. These are mainly criminal, near-criminal and unreliable ethnic groups. The existence of such ghettos frightens people and repels business, they need to be eliminated. To do this, the government will additionally finance the penitentiary system and strengthen the police staff."
+ POL_transform_into_political_organization_of_the_nation:0 "Political Organization of the Nation"
+ POL_transform_into_political_organization_of_the_nation_desc:0 "The Falanga has reached the peak of its development and is turning from a party into a real system that will affect all aspects of life. The new organization will have a strict hierarchy, and in order to hold an important administrative, managerial or military post, mandatory party membership will be required. We are rebuilding existence itself for the benefit of the people."
+ 
+ POL_return_of_crusades:0 "Return to the Crusades"
+ POL_return_of_crusades_desc:0 "We have defended Catholicism at home, but Poland is surrounded by a whole Christian civilization that is suffering under the yoke of autocrats. Worst of all, the places where our faith came from are now being desecrated by apostates and heretics. We can't just watch this anymore, it's time to take up arms!"
+ POL_catholic_universalism:0 "Universalism"
+ POL_catholic_universalism_desc:0 "If you believe in Christ, pray and repent to Him, then all earthly sins will be forgiven you. We will bring this truth to every godless and erring person in order to grant forgiveness. Others who dare to challenge us will face eternal damnation and oblivion."
+ POL_retake_palestine:0 "Retake the Holy Land"
+ POL_retake_palestine_desc:0 "In 1364, King Peter I of Cyprus asked King Casimir III of Poland to organize a crusade. This proposal was rejected due to domestic problems. However, now it frees our hands, because we can use these facts for legitimate claims to the Holy Land."
+ POL_recreate_kingdom_of_jerusalem:0 "Recreate the Kingdom of Jerusalem"
+ POL_recreate_kingdom_of_jerusalem_desc:0 "After we have saved the Holy Land, we have in our hands the divine right to restore the Kingdom of Jerusalem as it was, with us as its rulers and to protect the inheritance of the Lord. God wills this!"
+ POL_loyalty_to_the_vatican:0 "Loyalty to the Vatican"
+ POL_loyalty_to_the_vatican_desc:0 "The confirmation of loyalty to the Vatican guarantees that the papal influence on the Polish government and society will not weaken and will provide us with spiritual support. Under the guidance of the Holy See, we will lead Poland to become a bastion of Catholic faith and morality throughout Europe. But to do this, we need to share our conquests..."
+ POL_our_own_church:0 "Polish National Catholic Church"
+ POL_our_own_church_desc:0 "Poles should prevail in the Catholic hierarchy of Poland, as well as services should be conducted in Polish. Back in 1551, Andrzej Frycz Modrzewski spoke about this in his work «On the Improvement of Commonwealth», where he advocated the creation of a Polish church. This will inevitably lead to a schism and place great responsibility on us."
+ POL_vatican_support:0 "Support from the Papal See"
+ POL_vatican_support_desc:0 "We have given Palestine to the See, and now we plan to receive the full support of the Catholic Church. Poland has already fulfilled its divine mission and now the whole Christian world must accept our significance. After all, we are the first Crusader state in a long time."
+ POL_popes_visist:0 "The Pope's Visit"
+ POL_popes_visist_desc:0 "The Pope's visit and his visit to our historical and holy places will be an amazing event. We will not only charge our people with faith in our cause, but also show all countries of the world that the truth and the will of God are on our side."
+ POL_export_catholicism_abroad:0 "Catholicism for Export"
+ POL_export_catholicism_abroad_desc:0 "We can condemn heretics and sinners as much as we like, but are they worthy of such a life? These people have never seen the light, and therefore lead their way of life typical of darkness. Poland must definitely come to their aid and put an end to this nightmare."
+ POL_destroy_fake_pope:0 "The End of Vatican Power"
+ POL_destroy_fake_pope_desc:0 "The Vatican can make anyone who does not adhere to the general line an outcast, it decides which church is right and which is not. Since we were a worthy competitor to it, the need for a tiny enclave inside Rome disappeared. We will send the Italians a request to disband this small state."
+ POL_our_own_pope:0 "Election of a New Pope"
+ POL_our_own_pope_desc:0 "Now nothing prevents us from assembling our own conclave to elect a Pope. This will be a blow to the adherents of the old Roman denomination and a new page in the history of Poland, in which it becomes the mainstay of all true Catholics."
  
  POL_oppose_sanation:0 "Oppose Sanation"
  POL_oppose_sanation_desc:0 "Piłsudski's militaristic regime is nothing without him. Already, a struggle for the right to be a dictator is raging among his supporters. Let's not wait for the military to arrange terror!"
