--- a/localisation/russian/countries_l_russian.yml
+++ b/localisation/russian/countries_l_russian.yml
@@ -1124,17 +1124,17 @@
  SER_fascism_DEF:0 "Королевство Сербия"
  SER_fascism_ADJ:0 "Сербск."
  
- ALB_communism:0 "Народная Социалистическая Республика Албания"
- ALB_communism_DEF:0 "Народная Социалистическая Республика Албания"
+ ALB_communism:0 "Народная Республика Албания"
+ ALB_communism_DEF:0 "Народная Республика Албания"
  ALB_communism_ADJ:0 "Албанск."
- ALB_democratic:0 "Республика Албания"
- ALB_democratic_DEF:0 "Республика Албания"
+ ALB_democratic:0 "Албанское королевство"
+ ALB_democratic_DEF:0 "Албанское королевство"
  ALB_democratic_ADJ:0 "Албанск."
- ALB_neutrality:0 "Королевство Албания"
- ALB_neutrality_DEF:0 "Королевство Албания"
+ ALB_neutrality:0 "Албанское королевство"
+ ALB_neutrality_DEF:0 "Албанское королевство"
  ALB_neutrality_ADJ:0 "Албанск."
- ALB_fascism:0 "Королевство Албания"
- ALB_fascism_DEF:0 "Королевство Албания"
+ ALB_fascism:0 "Великая Албания"
+ ALB_fascism_DEF:0 "Великая Албания"
  ALB_fascism_ADJ:0 "Албанск."
  
  GRE_communism:0 "Греческая Республика"
