--- a/localisation/russian/replace/deluge_poland_characters_l_russian.yml
+++ b/localisation/russian/replace/deluge_poland_characters_l_russian.yml
@@ -116,6 +116,24 @@
  POL_deluge_michalowicz_desc:0 ""
  POL_Character_deluge_jan_woznicki:0 "Ян Возницкий"
  POL_deluge_jan_woznicki_desc:0 ""
+ POL_Character_deluge_stanislaw_wojciechowski:0 "Станислав Войцеховский"
+ POL_deluge_stanislaw_wojciechowski_desc:0 ""
+ POL_Character_deluge_norbert_barlicki:0 "Норберт Барлицкий"
+ POL_deluge_norbert_barlicki_desc:"0 ""
+ POL_Character_deluge_adam_ciolkosz:0 "Адам Циолкош"
+ POL_deluge_adam_ciolkosz_desc:0 ""
+ POL_Character_deluge_jozef_cyrankiewicz:0 "Юзеф Циранкевич"
+ POL_deluge_jozef_cyrankiewicz_desc:0 ""
+ POL_Character_deluge_adolf_warski:0 "Адольф Варский"
+ POL_deluge_adolf_warski_desc:0 ""
+ POL_Character_deluge_alfred_lampe:0 "Альфред Лямпе"
+ POL_deluge_alfred_lampe_desc:0 ""
+ POL_Character_deluge_stanislaw_radkiewicz:0 "Станислав Радкевич"
+ POL_deluge_stanislaw_radkiewicz_desc:0 ""
+ POL_Character_deluge_wladyslaw_studnicki:0 "Владислав Студницкий-Гизберт"
+ POL_deluge_wladyslaw_studnicki_desc:0 ""
+ POL_Character_deluge_edward_gierek:0 "Эдвард Герек"
+ POL_deluge_edward_gierek_desc:0 ""
  POL_Character_deluge_romer:0 "Тадеуш Ромер"
  POL_deluge_romer_desc:0 ""
  POL_Character_deluge_zygalski:0 "Генрик Зыгальский"
@@ -236,6 +254,8 @@
  POL_deluge_julian_tuwin_desc:0 ""
  POL_Character_deluge_izabella_roza_radziwillowna:0 "Изабелла I"
  POL_deluge_izabella_roza_radziwillowna_desc:0 ""
+ POL_Character_deluge_andrassy_sandor:0 "Александр II"
+ POL_deluge_andrassy_sandor_desc:0 ""
  POL_Character_deluge_augustyn_czartoryski:0 "Августин Юзеф III"
  POL_deluge_augustyn_czartoryski_desc:0 ""
  POL_Character_deluge_pawel_salwator_piast_riedelski:0 "Павел I"
@@ -304,6 +324,8 @@
  POL_deluge_edward_osobka_morawski_desc:0 ""
  POL_Character_deluge_widy_wirski:0 "Феликс Виды-Вирский"
  POL_deluge_widy_wirski_desc:0 ""
+ POL_Character_deluge_feliks_dzierzynski:0 "Феликс Дзержинский"
+ POL_deluge_feliks_dzierzynski_desc:0 ""
  POL_Character_deluge_karol_radek:0 "Кароль Зобельзон"
  POL_deluge_karol_radek_desc:0 ""
  POL_Character_deluge_artur_sliwinski:0 "Артур Сливиньский"
