--- a/localisation/russian/replace/deluge_poland_focuses_l_russian.yml
+++ b/localisation/russian/replace/deluge_poland_focuses_l_russian.yml
@@ -176,8 +176,8 @@
  POL_mass_propagation_of_anthropocentrism_desc:0 "Пока остальные падают в ноги своим богам и королям, мы являемся оплотом здравомыслия, чистоты и порядка. Польский народ — самые важные люди в мире, а наше государство состоит из польского народа, соответственно, это самое важное государство в мире!"
  POL_liberate_women_from_catholic_slavery:0 "Вырвать женщин из католического рабства"
  POL_liberate_women_from_catholic_slavery_desc:0 "Польские женщины не раз проявляли своё мужество, что во время сражений за независимость, что в обычной жизни. Но независимо от масштаба подвига, католическая церковь возвращала их на путь кабалы. Теперь, когда католицизм отступил, пришла пора дать нашим женщинам то, что должно быть по праву рождения у каждого — возможность быть наравне со всеми."
- POL_repair_polish_ideomatrix:0 "Польская матрица идей"
- POL_repair_polish_ideomatrix_desc:0 "Матрица идей — это всё, что формирует наше мировоззрение и мышление: школы, газеты, религия, культура и даже общество. Польская матрица идей нуждается в фундаментальной замене: школы перестали учить полезному и развивающему, газеты часто антипольски настроены, а нынешняя религия используется членами церкви как инструмент для навешивания ярлыков на неугодных."
+ POL_repair_polish_ideomatrix:0 "Польская идеоматрица"
+ POL_repair_polish_ideomatrix_desc:0 "Идеоматрица — это всё, что формирует наше мировоззрение и мышление: школы, газеты, религия, культура и даже общество. Польская идеоматрица нуждается в фундаментальной замене: школы перестали учить полезному и развивающему, газеты часто антипольски настроены, а нынешняя религия используется членами церкви как инструмент для навешивания ярлыков на неугодных."
  POL_cult_of_emilia_plater:0 "Культ Эмилии Плятер"
  POL_cult_of_emilia_plater_desc:0 "Эмилия Плятер — знаменитая польская женщина-полководец, революционер, национальный герой. Новое поколение должно равняться на неё во всех аспектах, мы научим их служить отечеству точно так же, как это делала она. Нет ничего храбрее, чем отдать свою молодость на служение Родине."
  POL_protect_people_from_backward_culture:0 "Защита от «обратной культуры»"
@@ -205,6 +205,51 @@
  POL_expand_war_industry_desc:0 "НРЛ настаивает на расширении военной промышленности, уделяя особое внимание модернизации. Новые производственные линии, фабрики и инфраструктура не только создадут новые рабочие места и простимулируют инвестиции, но и обеспечат Польшу военной техникой, необходимой для противостояния старым и новым угрозам."
  POL_autarky:0 "Автаркия"
  POL_autarky_desc:0 "Мы достигли приемлемого уровня самодостаточности. Отныне Польша не нуждается во внешней торговле и иностранном влиянии, чтобы нормально функционировать. Конечно, мы ощутим удар, ведь у независимости должна быть своя цена, но наша экономика восстанет как феникс и отплатит сполна."
+ POL_promote_national_radical_ideology:0 "Национал-радикальная идеология"
+ POL_promote_national_radical_ideology_desc:0 "Ультранационалистическая идеология никогда не имела чёткого определения, только общую концепцию. Мы основательно подойдём к этому вопросу и создадим идеологию с акцентом на традиционные ценности, опору на собственные силы и военную мощь."
+ POL_deals_with_church:0 "Единение с церковью"
+ POL_deals_with_church_desc:0 "Церковь является главным союзником нашей партии, и наш долг — оберегать католическую веру, на которой была выстроена нация. Мы должны связать власть и церковь вместе, как это было когда-то. Отныне не будет доминирующей конфессии, только государственная!"
+ POL_catholic_youth_organisations:0 "Серые шеренги"
+ POL_catholic_youth_organisations_desc:0 "Если мы хотим оставить после себя будущее, для него нужно создать задел. Союзу польских харцеров — нашей национальной скаутской организации — нужно вручить больше ресурсов и дать новую цель. Польским пионерам нужно прививать чувства товарищества, отваги, самопожертвования и веры."
+ POL_unite_with_onr_abc:0 "Есть только один Лагерь"
+ POL_unite_with_onr_abc_desc:0 "После майского переворота 1930 года многие члены НРЛ присоединились к Пилсудскому, а потом создали «Фалангу» — то, чем являемся мы сейчас, другие же перешли к национальным демократам, однако позже создали своё крышло партии: НРЛ-ABC. Теперь, когда мы у руля, пора остановить этот бесконечный раскол и принять покаявшихся товарищей обратно."
+ POL_establish_universal_educational_organization:0 "Всеобщая образовательная организация"
+ POL_establish_universal_educational_organization_desc:0 "ВОО — это организация, которая совместно с родителями, учителями и священнослужителями создаст новый тип человека из подростающего поколения, кредом которого будут католическая вера и национальные идеалы."
+ POL_introduce_eugenics_into_hospitals:0 "Евгеника"
+ POL_introduce_eugenics_into_hospitals_desc:0 "В последний десяток лет набирает популярность молодая наука о селекции, применимая к человеку, — евгеника. И, хотя её придумали на западе, она очень подходит к политике, которую проводим мы. Польские учёные способны развить это учение, призванное бороться с явлениями вырождения в человеческом генофонде."
+ POL_create_new_type_of_man:0 "Новый тип человека"
+ POL_create_new_type_of_man_desc:0 "Чтобы показать, каким должен быть примерный поляк, мы создадим пропагандистский образ нового человека! Если это мужчина, то он должен быть статен, подтянут, тяжело трудиться или нести службу; если это женщина, то она должна заботиться о детях, быть хозяйствена и пригожа."
+ POL_isolate_worse_ones_from_poles:0 "Социальный контроль"
+ POL_isolate_worse_ones_from_poles_desc:0 "Мы просто не можем позволить, чтобы всякий недостойный, вроде сионистов, либералов и атеистов, вмешивался в жизнь порядочных граждан. Нам нужно изолировать эти асоциальные элементы, дав им самую тяжкую и грязную работу и поселив их в отдалённых местах."
+ POL_nationalise_minorites_fortunes:0 "Наше и всегда им было"
+ POL_nationalise_minorites_fortunes_desc:0 "Разнообразные национальные меньшинства веками паразитировали на поляках, особенно во времена нашей слабости. Они эксплуатировали нас будучи ростовщиками, торговцами и во многих других сферах, связанных с деньгами. Но теперь для Польши настало время, когда мы можем вернуть всё нажитое законным трудом..."
+ POL_clean_the_ghettos:0 "Очистить гетто"
+ POL_clean_the_ghettos_desc:0 "В ряде городов существуют кварталы или целые районы неблагополучных жителей. В основном это криминальные, околокриминальные и ненадёжные этнические группы. Существование таких гетто пугает людей и отталкивает бизнес, их нужно ликвидировать. Для этого правительство дополнительно профинансирует пенитенциарную систему и усилит полицейский штат."
+ POL_transform_into_political_organization_of_the_nation:0 "Политическая организация народа"
+ POL_transform_into_political_organization_of_the_nation_desc:0 "«Фаланга» достигла пика своего развития и превращается из партии в настоящую систему, которая будет влиять на все аспекты жизни. Новая организация будет иметь строгую иерархию, а чтобы занимать важный административный, управленческий или военный пост потребуется обязательное членство в партии. Мы перестраиваем само бытие на благо народа."
+ 
+ POL_return_of_crusades:0 "Возвращение к походам"
+ POL_return_of_crusades_desc:0 "Мы защитили католичество у себя дома, но Польшу окружает целая христианская цивилизация, которая страдает под гнётом самодуров. Хуже всего, что места, откуда пришла наша вера, сейчас оскверняются богоотступниками и еретиками. Мы больше не можем просто за наблюдать за этим, пора браться за оружие!"
+ POL_catholic_universalism:0 "Универсализм"
+ POL_catholic_universalism_desc:0 "Если ты веришь в Христа, молишься и каешься Ему, то тебе будут отпущены все земные грехи. Мы донесём эту истину до каждого безбожника и заблудшего, чтобы даровать прощение. Иных, рискнувших бросить нам вызов, будет ждать вечное проклятие и забвение."
+ POL_retake_palestine:0 "Отвоевать Святую землю"
+ POL_retake_palestine_desc:0 "В 1364 году король Кипра Пётр I попросил короля Польши Казимира III организовать крестовый поход. Это предложение было отвергнуто из-за наличия внутригосударственных проблем. Однако теперь это развязывает нам руки, ведь мы можем использовать эти факты для законных притязаний на Святую землю."
+ POL_recreate_kingdom_of_jerusalem:0 "Воссоздать Иерусалимское королевство"
+ POL_recreate_kingdom_of_jerusalem_desc:0 "После того, как мы спасли Святую землю, в наших руках божественное право восстановить Иерусалимское королевство таким, каким оно было, с нами в качестве его правителей и защитить наследие Господня. Так хочет Бог!"
+ POL_loyalty_to_the_vatican:0 "Верность Ватикану"
+ POL_loyalty_to_the_vatican_desc:0 "Подтверждение верности Ватикану гарантирует, что папское влияние на польское правительство и общество не ослабнет и обеспечит нам духовную поддержку. Под наставлением Святого Престола мы приведём Польшу к тому, чтобы она стала бастионом католической веры и морали во всей Европе. Но для этого нужно поделиться нашими завоеваниями..."
+ POL_our_own_church:0 "Польская национальная католическая церковь"
+ POL_our_own_church_desc:0 "В католической иерархии Польши должны преобладать поляки, равно как и богослужения должны вестись на польском языке. Ещё в 1551 году об этом говорил Анджей Фрыч-Моджевский в своей работе «Об исправлении государства», где он выступал за создание польской церкови. Это неминуемо приведёт к расколу и возложит на нас большую ответственность."
+ POL_vatican_support:0 "Поддержка от Папского Престола"
+ POL_vatican_support_desc:0 "Мы отдали Палестину Престолу, теперь мы планируем получить всестороннюю поддержку католической церкви. Польша уже исполнила свою божественную миссию и теперь весь христианский мир должен принять нашу значимость. В конце концов, мы — первое государство крестоносцев за долгое время."
+ POL_popes_visist:0 "Визит Папы Римского"
+ POL_popes_visist_desc:0 "Визит Папы и посещение им наших исторических и святых мест станет потрясающим событием. Мы не только зарядим свой народ верой в наше дело, но и покажем всем странам мира, что правда и воля Бога на нашей стороне."
+ POL_export_catholicism_abroad:0 "Католицизм на экспорт"
+ POL_export_catholicism_abroad_desc:0 "Мы можем сколько угодно порицать еретиков и грешников, но достойны ли они такой жизни? Эти люди никогда не видели света, а потому ведут свой образ жизни типичный для тьмы. Польша обязательно должна придти к ним на помощь и положить конец этому кошмару."
+ POL_destroy_fake_pope:0 "Конец власти Ватикана"
+ POL_destroy_fake_pope_desc:0 "Ватикан может сделать изгоем всякого, кто не придерживается генеральной линии, там решается какая церковь правильная, а какая нет. Так как мы составили ему достойную конкуренцию, необходимость в крохотном анклаве внутри Рима отпала. Мы отправим итальянцам запрос о расформировании этого маленького государства."
+ POL_our_own_pope:0 "Избрание нового Папы"
+ POL_our_own_pope_desc:0 "Теперь нам ничего не мешает собрать собственный конклав с целью избрать Папу. Это станет ударом по приверженцам старой римской конфессии и новой страницей в истории Польши, в которой она становится опорой всех настоящих католиков."
  
  POL_oppose_sanation:0 "Противостоять Санации"
  POL_oppose_sanation_desc:0 "Милитаристский режим Пилсудского без него самого ничего из себя не представляет. Уже сейчас между его сторонниками разгорается борьба за право быть диктатором. Давайте не будем ждать, когда военщина устроит террор!"
