--- a/localisation/english/replace/deluge_poland_content_l_english.yml
+++ b/localisation/english/replace/deluge_poland_content_l_english.yml
@@ -144,56 +144,12 @@
  POL_reorganise_regiments_desc:0 "Basic regiments of soldiers are badly organized, low-rank soldiers are lazy and undisciplined. We need to totally reogranize them."
  POL_waste_bullets_not_men:0 "Waste Bullets, Not Men"
  POL_waste_bullets_not_men_desc:0 "[POL.GetAdjectiveCap] lifes are the most important and valueable things, more valueable than bullets or money."
- POL_promote_national_radical_ideology:0 "National-Radical Ideology"
- POL_promote_national_radical_ideology_desc:0 "Our ideology is radical, but every other will not provide solutions necessary for our nation to survive in this world of violence and war of tribes."
- POL_establish_universal_educational_organization:0 "Universal Educational Organization"
- POL_establish_universal_educational_organization_desc:0 ""Powszechna Organizacja Wychowawcza" - "Universal Educational Organization" is organisation that with parents, teachers and priests will create "new type of men" based on catholic and national values."
- POL_create_new_type_of_man:0 "Create New Type of Man"
- POL_create_new_type_of_man_desc:0 "We were able to create new, stronger, better type of men that serves our country without any doubts."
- POL_isolate_worse_ones_from_poles:0 "Isolate Worse Ones from Poles"
- POL_isolate_worse_ones_from_poles_desc:0 "We cannot let worse ones disturb life of decent Poles. We need to isolate them."
- POL_nationalise_minorites_fortunes:0 "Nationalise Minorities' Fortunes"
- POL_nationalise_minorites_fortunes_desc:0 "Minorities like jews were parasitising on Poles for centuries. They exploited them as bank workers, traders and many other jobs connected to money. Now it's time to retake all that money."
- POL_deals_with_church:0 "Deals with Church"
- POL_deals_with_church_desc:0 "We can approach many priests and ask them to teach people our values for reliefs and facilitations."
- POL_unite_with_onr_abc:0 "Unite with ONR ABC"
- POL_unite_with_onr_abc_desc:0 "After May Coup in 1930 many member of ONR joined Piłsudski, later they created ONR-Falanga. Others joined ND, however later created ONR-ABC. Now when we are in charge we can unify ONR!"
- POL_transform_into_political_organization_of_the_nation:0 "§GPolitical Organization of the Nation§!"
- POL_transform_into_political_organization_of_the_nation_desc:0 ""Polityczna Organizacja Narodu" is party that all people must support, belived, live and die for. Disobeying is a crime, a sin that must be punished harshly. No other parties can exist, or even should exist, §RPON is the only party we need!§!"
- POL_catholic_youth_organisations:0 "Catholic Youth Organisations"
- POL_catholic_youth_organisations_desc:0 "We can establish youth organisations with help of Catholic Church that will help in training men for soldiers and women for mothers."
- POL_introduce_eugenics_into_hospitals:0 "Introduce Eugenics into Hospitals"
- POL_introduce_eugenics_into_hospitals_desc:0 "We cannot let weak genes spread. If weak or disabled child is born it must be killed - just like in ancient Sparta!"
- POL_clean_the_ghettos:0 "Clean the Ghettos"
- POL_clean_the_ghettos_desc:0 "There are too many minorites - some of them need to be removed to decrease costs connected with management."
  POL_andrassy_wins:0 "Andrássy"
  POL_andrassy_wins_desc:0 ""
  POL_bonaparte_bastard_wins:0 "Walewski - Napoleon's Bastard"
  POL_bonaparte_bastard_wins_desc:0 ""
  POL_tyszkiewicz_wins:0 "Tyszkiewicz"
  POL_tyszkiewicz_wins_desc:0 ""
- POL_return_of_crusades:0 "Return of Crusades"
- POL_return_of_crusades_desc:0 ""
- POL_catholic_universalism:0 "Catholic Universalism"
- POL_catholic_universalism_desc:0 ""
- POL_retake_palestine:0 "Retake Holy Land"
- POL_retake_palestine_desc:0 ""
- POL_recreate_kingdom_of_jerusalem:0 "Recreate Kingdom of Jerusalem"
- POL_recreate_kingdom_of_jerusalem_desc:0 ""
- POL_loyalty_to_the_vatican:0 "Loyalty to the Vatican"
- POL_loyalty_to_the_vatican_desc:0 ""
- POL_vatican_support:0 "Vatican Support"
- POL_vatican_support_desc:0 "We gave Palestine to the Pope, now he returns the favour."
- POL_popes_visist:0 "Pope's Visit"
- POL_popes_visist_desc:0 ""
- POL_our_own_church:0 "Our Own Church"
- POL_our_own_church_desc:0 ""
- POL_destroy_fake_pope:0 "Destroy Fake Pope"
- POL_destroy_fake_pope_desc:0 ""
- POL_export_catholicism_abroad:0 "Export Catholicism Abroad"
- POL_export_catholicism_abroad_desc:0 ""
- POL_our_own_pope:0 "Our Own Pope"
- POL_our_own_pope_desc:0 ""
  POL_rise_of_national_liberal_catholicism:0 "Rise of National-Liberal Catholicism"
  POL_rise_of_national_liberal_catholicism_desc:0 ""
  POL_seek_support_among_peasants:0 "Seek Support Among Peasants"
@@ -479,6 +435,68 @@
  POL_deal_with_jews_desc:0 ""
  POL_alliance_with_church_monarchist:0 "Alliance with Church"
  POL_alliance_with_church_monarchist_desc:0 ""
+ POL_exclude_nobility_from_obligatory_army_service:0 "Exclude Nobility from Obligatory Army Service"
+ POL_exclude_nobility_from_obligatory_army_service_desc:0 ""
+ POL_exceptions_for_the_nobility_in_the_army:0 "Exceptions for the Nobility in the Army"
+ POL_exceptions_for_the_nobility_in_the_army_desc:0 ""
+ POL_profesional_army:0 "Professional Army"
+ POL_profesional_army_desc:0 ""
+ POL_women_in_military_monarchist:0 "Women in Military"
+ POL_women_in_military_monarchist_desc:0 ""
+ POL_path_towards_racial_purity:0 "Path Towards Racial Purity"
+ POL_path_towards_racial_purity_desc:0 ""
+ POL_equality_of_race:0 "Equality of Race"
+ POL_equality_of_race_desc:0 ""
+ POL_encourage_imigration:0 "Encourage Immigration"
+ POL_encourage_imigration_desc:0 ""
+ POL_free_market_economy:0 "Free Market Economy"
+ POL_free_market_economy_desc:0 ""
+ POL_mixed_economy:0 "Mixed Economy"
+ POL_mixed_economy_desc:0 ""
+ POL_economy_controlled_by_synarch:0 "Economy Controlled by Synarch"
+ POL_economy_controlled_by_synarch_desc:0 ""
+ POL_women_in_parlament:0 "Women in the Parliament"
+ POL_women_in_parlament_desc:0 ""
+ POL_every_adult_men_in_parlament:0 "Every Adult Men in the Parliament"
+ POL_every_adult_men_in_parlament_desc:0 ""
+ POL_only_nobility_in_the_parlament:0 "Only Nobility in the Parliament"
+ POL_only_nobility_in_the_parlament_desc:0 ""
+ POL_disband_parlament:0 "Disband the Parliament"
+ POL_disband_parlament_desc:0 ""
+ POL_noble_titles_for_women:0 "Noble Titles for Women"
+ POL_noble_titles_for_women_desc:0 ""
+ POL_socialist_kingdom:0 "Socialist Kingdom"
+ POL_socialist_kingdom_desc:0 ""
+ POL_increasing_the_distribution_of_noble_titles:0 "Increasing the Distribution of Noble Titles"
+ POL_increasing_the_distribution_of_noble_titles_desc:0 ""
+ POL_enpower_bourgeoisie:0 "Enpower Bourgeoisie"
+ POL_enpower_bourgeoisie_desc:0 ""
+ POL_reintroduce_liberum_veto:0 "Reintroduce Liberum Veto"
+ POL_reintroduce_liberum_veto_desc:0 ""
+ POL_king_only_figurehead:0 "King - Only Figurehead"
+ POL_king_only_figurehead_desc:0 ""
+ POL_technocratic_government:0 "Technocratic Government"
+ POL_technocratic_government_desc:0 ""
+ POL_empower_the_synarch:0 "Enpower the Synarch"
+ POL_empower_the_synarch_desc:0 ""
+ POL_increase_influence_of_AMORC_knights:0 "Increase Influence of AMORC Knights"
+ POL_increase_influence_of_AMORC_knights_desc:0 ""
+ POL_cut_off_greedy_nobility:0 "Cut Off Greedy Nobility"
+ POL_cut_off_greedy_nobility_desc:0 ""
+ POL_enpower_masonic_lodges:0 "Enpower Masonic Lodges"
+ POL_enpower_masonic_lodges_desc:0 ""
+ POL_dissemination_of_sarmatian_myth:0 "Dissemination of Sarmatian Myth"
+ POL_dissemination_of_sarmatian_myth_desc:0 ""
+ POL_bring_back_patriarchy:0 "Bring Back Patriarchy"
+ POL_bring_back_patriarchy_desc:0 ""
+ POL_healthcare_reform:0 "Healthcare Reform"
+ POL_healthcare_reform_desc:0 ""
+ POL_help_lower_class:0 "Help Lower Class"
+ POL_help_lower_class_desc:0 ""
+ POL_build_up_highways:0 "Build Up Highways"
+ POL_build_up_highways_desc:0 ""
+ POL_attract_foreign_funds:0 "Attract Foreign Funds"
+ POL_attract_foreign_funds_desc:0 ""
  POL_exclude_nobility_from_obligatory_army_service:0 "Exclude Nobility from Obligatory Army Service"
  POL_exclude_nobility_from_obligatory_army_service_desc:0 ""
  POL_exceptions_for_the_nobility_in_the_army:0 "Exceptions for the Nobility in the Army"
