--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -342,6 +342,19 @@
  POL_slavic_fascism_DEF:0 "the Slavic Empire"
  POL_slavic_fascism_ADJ:0 "Slavic"
  
+ POL_hungary_communism:0 ""
+ POL_hungary_communism_DEF:0 ""
+ POL_hungary_communism_ADJ:0 ""
+ POL_hungary_democratic:0 ""
+ POL_hungary_democratic_DEF:0 ""
+ POL_hungary_democratic_ADJ:0 ""
+ POL_hungary_neutrality:0 ""
+ POL_hungary_neutrality_DEF:0 ""
+ POL_hungary_neutrality_ADJ:0 ""
+ POL_hungary_fascism:0 ""
+ POL_hungary_fascism_DEF:0 ""
+ POL_hungary_fascism_ADJ:0 ""
+ 
  PAL_POL_communism:0 "Palestinian Republic"
  PAL_POL_communism_DEF:0 "the Palestinian Republic"
  PAL_POL_communism_ADJ:0 "Palestinian"
