--- a/localisation/english/replace/deluge_poland_characters_l_english.yml
+++ b/localisation/english/replace/deluge_poland_characters_l_english.yml
@@ -170,6 +170,8 @@
  POL_deluge_augustus_wettin_desc:0 ""
  POL_Character_deluge_monarchist_consul:0 "Regency Council of the Kingdom of Poland"
  POL_deluge_monarchist_consul_desc:0 ""
+ POL_Character_deluge_sejm:0 "Sejm, Senat and Sejmiki"
+ POL_deluge_sejm_desc:0 ""
  POL_Character_deluge_christian_wettin:0 "Fryderyk Krystian II"
  POL_deluge_christian_wettin_desc:0 ""
  POL_Character_deluge_koc:0 "Adam Koc"
